--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,19 @@
     <string name="app_name">San Miguel Municipio</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_main_parking">Estacionamiento</string>
+    <string name="title_activity_availability">Disponibilidad</string>
+
     <string name="parking">Estacionamiento</string>
-    <string name="points_of_sale">Puntos de Venta</string>
+    <string name="stores">Puntos de Venta</string>
     <string name="availability">Disponibilidad</string>
 
     <string name="action_settings">Settings</string>
     <string name="parking_start">Comenzar</string>
     <string name="parking_finish">Finalizar</string>
     <string name="domain">Dominio</string>
+
+    <string name="search">Buscar</string>
+    <string name="street">Calle</string>
+    <string name="number">Altura</string>
+
 </resources>
