--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">San Miguel Municipio</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Mapa</string>
     <string name="title_activity_main_parking">Estacionamiento</string>
     <string name="title_activity_availability">Disponibilidad</string>
 
